<resources>
    <string name="app_name">Steplab</string>
    <string name="button_new_configuration">New Configuration</string>
    <string name="button_start_pedometer">Start Pedometer</string>
    <string name="enter_settings">Enter Settings</string>
    <string name="sampling_rate">Sampling Rate</string>
    <string name="max_available">Max Available</string>
    <string name="modality">Modality</string>
    <string name="modality_italic"><i>Modality: </i></string>
    <string name="real_time">Real-Time</string>
    <string name="not_real_time">Not Real-Time</string>
    <string name="additional_algorithms">Additional Algorithms</string>
    <string name="mode_auto_determined">(automatically determined)</string>
    <string name="step_recognition_algorithm">Step Recognition Algorithm</string>
    <string name="step_recognition_algorithm_italic"><i>Step Recognition Algorithm: </i></string>
    <string name="peak">Peak Algorithm</string>
    <string name="intersection">Peak + Intersection Algorithm</string>
    <string name="timeFiltering">Time filtering + Peak</string>
    <string name="filter">Filter</string>
    <string name="filter_italic"><i>Filter: </i></string>
    <string name="bagilevi_filter">Bagilevi Algorithm</string>
    <string name="low_pass_filter">Low-Pass Filter</string>
    <string name="no_filter">No Filter</string>
    <string name="rotation_filter">Rotation Matrix</string>
    <string name="butterworth_filter">Butterworth Filter</string>
    <string name="falseMagn">False Step Recognition</string>
    <string name="autocorrelation">Autocorrelation</string>
    <string name="none_additional">None</string>
    <string name="cutoff_frequency">Cutoff Frequency</string>
    <string name="cutoff_frequency_italic"><i>Cutoff Frequency: </i></string>
    <string name="dynamic_frequency">Dynamic (Adaptive)</string>
    <string name="divided_fifty">2% Sampling Rate</string>
    <string name="number_of_steps">Steps:</string>
    <string name="enter_configuration">Enter Configuration</string>
    <string name="register_new_test">Register New Test</string>
    <string name="compare_configurations">Compare Configurations</string>
    <string name="live_testing">LIVE TESTING</string>
    <string name="offline_testing">OFFLINE TESTING</string>
    <string name="how_many_configurations">How many configurations do you want to test?</string>
    <string name="add_configuration">Add Configuration</string>
    <string name="start_comparison">Start Comparison</string>
    <string name="start_new_test">Start New Test</string>
    <string name="stop_new_test">Stop Test</string>
    <string name="save_new_test">Save Test</string>
    <string name="configuration_saved">Configuration Added!</string>
    <string name="new_test_saved">New Test Saved!</string>
    <string name="start_new_comparison">Start New Comparison</string>
    <string name="select_test">Select Test</string>
    <string name="select_another_test">Select Another Test</string>
    <string name="how_many_steps">How many steps did you count?</string>
    <string name="number_of_steps_counted">Steps Counted</string>
    <string name="delete">Are you sure you want to delete this test?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="import_test">Import Test</string>
    <string name="import_csv_test">Import CSV Test</string>
    <string name="send_test">Send Test</string>
    <string name="send">Send</string>
    <string name="test_imported">Test Imported!</string>
    <string name="number_steps_error">Enter Number of Steps!</string>
    
    <!-- Saved Configuration Comparisons -->
    <string name="save">Save</string>
    <string name="saved_tests">Saved Tests</string>
    <string name="save_configuration_comparison">Save Configuration Comparison</string>
    <string name="enter_unique_name">Enter a unique name for this comparison:</string>
    <string name="name_required">Name is required</string>
    <string name="name_already_exists">This name already exists. Please choose a different name.</string>
    <string name="comparison_saved">Configuration comparison saved!</string>
    <string name="delete_saved_comparison">Are you sure you want to delete this saved comparison?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="show_details">Show Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="test_colon">Test:</string>
    <string name="configurations_colon">Configurations:</string>
    <string name="created_at">Created at:</string>
    
    <!-- Export Format Dialog -->
    <string name="export_format_title">Export Format</string>
    <string name="export_format_message">Choose the format for exporting the test:</string>
    <string name="format_json">JSON Format (.json)</string>
    <string name="format_csv">CSV Format (.csv)</string>
    <string name="export_button">Export</string>
</resources>