<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_testing"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textSize="20dp">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>
        <Button
            android:id="@+id/enter_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="@string/enter_configuration">
        </Button>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/design_default_color_primary">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_testing"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textSize="20dp">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>
        <Button
            android:id="@+id/register_new_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="@string/register_new_test">
        </Button>
        <Button
            android:id="@+id/compare_configurations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="@string/compare_configurations"
            android:enabled="false">
        </Button>
        <Button
            android:id="@+id/import_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="@string/import_test">
        </Button>
        <Button
            android:id="@+id/send_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="@string/send_test"
            android:enabled="false">
        </Button>
    </LinearLayout>

</LinearLayout>

</ScrollView>