<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_configuration"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textSize="20dp">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>

        <TextView
            android:id="@+id/text_sampling_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampling_rate"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp">
        </TextView>
        <LinearLayout
            android:id="@+id/layout_sampling_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/sampling_twenty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="20 Hz">
                </RadioButton>
                <RadioButton
                    android:id="@+id/sampling_forty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="40 Hz">
                </RadioButton>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/sampling_fifty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="50 Hz">
                </RadioButton>
                <RadioButton
                    android:id="@+id/sampling_hundred"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="100 Hz">
                </RadioButton>
            </LinearLayout>
            <RadioButton
                android:id="@+id/sampling_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/max_available">
            </RadioButton>
        </LinearLayout>
        <View
            android:id="@+id/first_view"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/modality"
            android:textColor="@color/black"
            android:textSize="18dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/modality_real_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/real_time">
            </RadioButton>
            <RadioButton
                android:id="@+id/modality_not_real_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/not_real_time">
            </RadioButton>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/step_recognition_algorithm"
            android:textColor="@color/black"
            android:textSize="18dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/recognition_peak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/peak">
            </RadioButton>
            <RadioButton
                android:id="@+id/recognition_intersection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/intersection">
            </RadioButton>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/no_filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/no_filter">
                </RadioButton>
                <RadioButton
                    android:id="@+id/filter_low_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/low_pass_filter">
                </RadioButton>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/filter_rotation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/rotation_filter">
                </RadioButton>
                <RadioButton
                    android:id="@+id/filter_bagilevi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/bagilevi_filter">
                </RadioButton>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/design_default_color_primary">
        </View>

        <LinearLayout
            android:id="@+id/cutoff_frequency_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cutoff_frequency"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/cutoff_two"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="2 Hz">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/cutoff_three"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="3 Hz">
                    </RadioButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/cutoff_ten"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="10 Hz">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/cutoff_divided_fifty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/divided_fifty">
                    </RadioButton>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>

</ScrollView>